--- a/model_evaluation.ipynb
+++ b/model_evaluation.ipynb
@@ -1,6 +1,14 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model Evaluation\n",
+    "This notebook loads the data, does 5 fold cross validation on the model and takes the best model and displays the result."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
